Fixing button visibility

--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,10 @@ footer {
 
 .left {
     float: left;
+}
 
+#split, #insurance {
+    display: none;
 }
 
 /* font-family: 'Fascinate Inline', cursive;
